--- a/src/website/home/home.html
+++ b/src/website/home/home.html
@@ -2,9 +2,9 @@
 
 <head>
     <title>Circle | Main</title>
-    <link rel="stylesheet" href="../../assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../../assets/css/style.css" />
-    <link rel="stylesheet" href="../../assets/css/fontawesome.all.css" />
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/fontawesome.all.css" />
 </head>
 
 <body>
