--- a/src/website/home/home.html
+++ b/src/website/home/home.html
@@ -1,196 +1,154 @@
-<html>
-
-<head>
-    <title>Circle | Main</title>
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/assets/css/style.css" />
-    <link rel="stylesheet" href="/assets/css/fontawesome.all.css" />
-</head>
-
-<body>
-    <!-- Navbar taken from https://getbootstrap.com/docs/4.0/examples/navbars/ (modified)-->
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">Circle</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
-            aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarsExample04">
-            <form class="input-group my-2 my-md-0 search-bar">
-                <input class="form-control" type="text" placeholder="Search">
-                <div class="input-group-append">
-                    <div class="input-group-text"><span class="fas fa-search"></span></div>
+{{define "content"}}
+<div class="container">
+    <div class="card my-2 question">
+        <div class="card-body">
+            <div class="row">
+                <div class="col-md-1 left">
+                    <div class="vote">
+                        <div class="fas fa-chevron-up vote-button"></div>
+                        <div>24</div>
+                        <div class="fas fa-chevron-down vote-button"></div>
+                    </div>
+                    <p>2 Answers</p>
+                    <p class="bg-success text-white">Solved</p>
                 </div>
-            </form>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item highlighted">
-                    <a class="nav-link" href="#">Ask Question</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Profile</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Logout</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="container">
-        <div class="card my-2 question">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-1 left">
-                        <div class="vote">
-                            <div class="fas fa-chevron-up vote-button"></div>
-                            <div>24</div>
-                            <div class="fas fa-chevron-down vote-button"></div>
-                        </div>
-                        <p>2 Answers</p>
-                        <p class="bg-success text-white">Solved</p>
-                    </div>
-                    <div class="col-md-11 right">
-                        <h5 class="card-title"><a href="#">Question Title</a></h5>
-                        <h6 class="card-subtitle mb-2 text-muted"><a href="#">Username</a></h6>
-                        <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Mauris convallis, dolor eu ultrices porta, dui mi ornare
-                            mauris, rutrum ultrices tellus nisl tincidunt arcu.
-                            Nam condimentum ac ex vitae varius. Sed augue eros,
-                            luctus non nisl vitae, bibendum suscipit erat.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Nullam a mi elementum justo luctus dignissim a et nisl.
-                            Proin rutrum justo est, nec pellentesque dui scelerisque
-                            vitae.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="card my-2 question">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-1 left">
-                        <div class="vote">
-                            <div class="fas fa-chevron-up vote-button"></div>
-                            <div>24</div>
-                            <div class="fas fa-chevron-down vote-button"></div>
-                        </div>
-                        <p>2 Answers</p>
-                        <p class="bg-success text-white">Solved</p>
-                    </div>
-                    <div class="col-md-11 right">
-                        <h5 class="card-title"><a href="#">Question Title</a></h5>
-                        <h6 class="card-subtitle mb-2 text-muted"><a href="#">Username</a></h6>
-                        <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Mauris convallis, dolor eu ultrices porta, dui mi ornare
-                            mauris, rutrum ultrices tellus nisl tincidunt arcu.
-                            Nam condimentum ac ex vitae varius. Sed augue eros,
-                            luctus non nisl vitae, bibendum suscipit erat.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Nullam a mi elementum justo luctus dignissim a et nisl.
-                            Proin rutrum justo est, nec pellentesque dui scelerisque
-                            vitae.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="card my-2 question">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-1 left">
-                        <div class="vote">
-                            <div class="fas fa-chevron-up vote-button"></div>
-                            <div>24</div>
-                            <div class="fas fa-chevron-down vote-button"></div>
-                        </div>
-                        <p>2 Answers</p>
-                        <p class="bg-success text-white">Solved</p>
-                    </div>
-                    <div class="col-md-11 right">
-                        <h5 class="card-title"><a href="#">Question Title</a></h5>
-                        <h6 class="card-subtitle mb-2 text-muted"><a href="#">Username</a></h6>
-                        <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Mauris convallis, dolor eu ultrices porta, dui mi ornare
-                            mauris, rutrum ultrices tellus nisl tincidunt arcu.
-                            Nam condimentum ac ex vitae varius. Sed augue eros,
-                            luctus non nisl vitae, bibendum suscipit erat.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Nullam a mi elementum justo luctus dignissim a et nisl.
-                            Proin rutrum justo est, nec pellentesque dui scelerisque
-                            vitae.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="card my-2 question">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-1 left">
-                        <div class="vote">
-                            <div class="fas fa-chevron-up vote-button"></div>
-                            <div>24</div>
-                            <div class="fas fa-chevron-down vote-button"></div>
-                        </div>
-                        <p>2 Answers</p>
-                        <p class="bg-success text-white">Solved</p>
-                    </div>
-                    <div class="col-md-11 right">
-                        <h5 class="card-title"><a href="#">Question Title</a></h5>
-                        <h6 class="card-subtitle mb-2 text-muted"><a href="#">Username</a></h6>
-                        <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Mauris convallis, dolor eu ultrices porta, dui mi ornare
-                            mauris, rutrum ultrices tellus nisl tincidunt arcu.
-                            Nam condimentum ac ex vitae varius. Sed augue eros,
-                            luctus non nisl vitae, bibendum suscipit erat.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Nullam a mi elementum justo luctus dignissim a et nisl.
-                            Proin rutrum justo est, nec pellentesque dui scelerisque
-                            vitae.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="card my-2 question">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-1 left">
-                        <div class="vote">
-                            <div class="fas fa-chevron-up vote-button"></div>
-                            <div>24</div>
-                            <div class="fas fa-chevron-down vote-button"></div>
-                        </div>
-                        <p>2 Answers</p>
-                        <p class="bg-success text-white">Solved</p>
-                    </div>
-                    <div class="col-md-11 right">
-                        <h5 class="card-title"><a href="#">Question Title</a></h5>
-                        <h6 class="card-subtitle mb-2 text-muted"><a href="#">Username</a></h6>
-                        <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Mauris convallis, dolor eu ultrices porta, dui mi ornare
-                            mauris, rutrum ultrices tellus nisl tincidunt arcu.
-                            Nam condimentum ac ex vitae varius. Sed augue eros,
-                            luctus non nisl vitae, bibendum suscipit erat.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Nullam a mi elementum justo luctus dignissim a et nisl.
-                            Proin rutrum justo est, nec pellentesque dui scelerisque
-                            vitae.
-                        </p>
-                    </div>
+                <div class="col-md-11 right">
+                    <h5 class="card-title"><a href="#">Question Title</a></h5>
+                    <h6 class="card-subtitle mb-2 text-muted"><a href="#">Username</a></h6>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Mauris convallis, dolor eu ultrices porta, dui mi ornare
+                        mauris, rutrum ultrices tellus nisl tincidunt arcu.
+                        Nam condimentum ac ex vitae varius. Sed augue eros,
+                        luctus non nisl vitae, bibendum suscipit erat.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Nullam a mi elementum justo luctus dignissim a et nisl.
+                        Proin rutrum justo est, nec pellentesque dui scelerisque
+                        vitae.
+                    </p>
                 </div>
             </div>
         </div>
     </div>
-    <script src="../../assets/js/jquery-3.3.1.slim.min.js" type="text/javascript"></script>
-    <script src="../../assets/js/bootstrap.min.js" type="text/javascript"></script>
-</body>
-
-</html>
+    <div class="card my-2 question">
+        <div class="card-body">
+            <div class="row">
+                <div class="col-md-1 left">
+                    <div class="vote">
+                        <div class="fas fa-chevron-up vote-button"></div>
+                        <div>24</div>
+                        <div class="fas fa-chevron-down vote-button"></div>
+                    </div>
+                    <p>2 Answers</p>
+                    <p class="bg-success text-white">Solved</p>
+                </div>
+                <div class="col-md-11 right">
+                    <h5 class="card-title"><a href="#">Question Title</a></h5>
+                    <h6 class="card-subtitle mb-2 text-muted"><a href="#">Username</a></h6>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Mauris convallis, dolor eu ultrices porta, dui mi ornare
+                        mauris, rutrum ultrices tellus nisl tincidunt arcu.
+                        Nam condimentum ac ex vitae varius. Sed augue eros,
+                        luctus non nisl vitae, bibendum suscipit erat.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Nullam a mi elementum justo luctus dignissim a et nisl.
+                        Proin rutrum justo est, nec pellentesque dui scelerisque
+                        vitae.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card my-2 question">
+        <div class="card-body">
+            <div class="row">
+                <div class="col-md-1 left">
+                    <div class="vote">
+                        <div class="fas fa-chevron-up vote-button"></div>
+                        <div>24</div>
+                        <div class="fas fa-chevron-down vote-button"></div>
+                    </div>
+                    <p>2 Answers</p>
+                    <p class="bg-success text-white">Solved</p>
+                </div>
+                <div class="col-md-11 right">
+                    <h5 class="card-title"><a href="#">Question Title</a></h5>
+                    <h6 class="card-subtitle mb-2 text-muted"><a href="#">Username</a></h6>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Mauris convallis, dolor eu ultrices porta, dui mi ornare
+                        mauris, rutrum ultrices tellus nisl tincidunt arcu.
+                        Nam condimentum ac ex vitae varius. Sed augue eros,
+                        luctus non nisl vitae, bibendum suscipit erat.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Nullam a mi elementum justo luctus dignissim a et nisl.
+                        Proin rutrum justo est, nec pellentesque dui scelerisque
+                        vitae.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card my-2 question">
+        <div class="card-body">
+            <div class="row">
+                <div class="col-md-1 left">
+                    <div class="vote">
+                        <div class="fas fa-chevron-up vote-button"></div>
+                        <div>24</div>
+                        <div class="fas fa-chevron-down vote-button"></div>
+                    </div>
+                    <p>2 Answers</p>
+                    <p class="bg-success text-white">Solved</p>
+                </div>
+                <div class="col-md-11 right">
+                    <h5 class="card-title"><a href="#">Question Title</a></h5>
+                    <h6 class="card-subtitle mb-2 text-muted"><a href="#">Username</a></h6>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Mauris convallis, dolor eu ultrices porta, dui mi ornare
+                        mauris, rutrum ultrices tellus nisl tincidunt arcu.
+                        Nam condimentum ac ex vitae varius. Sed augue eros,
+                        luctus non nisl vitae, bibendum suscipit erat.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Nullam a mi elementum justo luctus dignissim a et nisl.
+                        Proin rutrum justo est, nec pellentesque dui scelerisque
+                        vitae.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="card my-2 question">
+        <div class="card-body">
+            <div class="row">
+                <div class="col-md-1 left">
+                    <div class="vote">
+                        <div class="fas fa-chevron-up vote-button"></div>
+                        <div>24</div>
+                        <div class="fas fa-chevron-down vote-button"></div>
+                    </div>
+                    <p>2 Answers</p>
+                    <p class="bg-success text-white">Solved</p>
+                </div>
+                <div class="col-md-11 right">
+                    <h5 class="card-title"><a href="#">Question Title</a></h5>
+                    <h6 class="card-subtitle mb-2 text-muted"><a href="#">Username</a></h6>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Mauris convallis, dolor eu ultrices porta, dui mi ornare
+                        mauris, rutrum ultrices tellus nisl tincidunt arcu.
+                        Nam condimentum ac ex vitae varius. Sed augue eros,
+                        luctus non nisl vitae, bibendum suscipit erat.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Nullam a mi elementum justo luctus dignissim a et nisl.
+                        Proin rutrum justo est, nec pellentesque dui scelerisque
+                        vitae.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{{end}}
