Update  register password type
- Change input type of password control to "password"

--- a/src/website/register/register.html
+++ b/src/website/register/register.html
@@ -23,13 +23,13 @@
                         <div class="input-group-prepend">
                             <div class="input-group-text"><span class="fas fa-unlock"></span></div>
                         </div>
-                        <input type="text" class="form-control" name="password" placeholder="Password">
+                        <input type="password" class="form-control" name="password" placeholder="Password">
                     </div>
                     <div class="input-group">
                         <div class="input-group-prepend">
                             <div class="input-group-text"><span class="fas fa-check"></span></div>
                         </div>
-                        <input type="text" class="form-control" name="confirm_password" placeholder="Confirm password">
+                        <input type="password" class="form-control" name="confirm_password" placeholder="Confirm password">
                     </div>
                     <div class="alert alert-danger error" role="alert" style="display:none">
                         Username has already been taken
