Add Register Username Taken Handler

--- a/src/website/register/register.html
+++ b/src/website/register/register.html
@@ -32,10 +32,11 @@
                         <input type="password" class="form-control" name="confirm_password" placeholder="Confirm password">
                     </div>
 
-                    
-                    <div class="alert alert-danger error" role="alert" style="display:none">
+                    {{if .IsError}}
+                    <div class="alert alert-danger error" role="alert">
                         Username has already been taken
                     </div>
+                    {{end}}
                     
                     <button type="submit" class="btn btn-dark float-right">Register</button>
                 </form>
