Update Register Success
- Add redirect to login page after register successful

--- a/src/website/register/register.html
+++ b/src/website/register/register.html
@@ -34,7 +34,7 @@
 
                     {{if .IsError}}
                     <div class="alert alert-danger error" role="alert">
-                        Username has already been taken
+                        {{.ErrorMessage}}
                     </div>
                     {{end}}
                     
