Login Success Message
- Add success message on login page after registration

--- a/src/website/register/register.html
+++ b/src/website/register/register.html
@@ -33,7 +33,7 @@
                     </div>
 
                     {{if .IsError}}
-                    <div class="alert alert-danger error" role="alert">
+                    <div class="alert alert-danger message" role="alert">
                         {{.ErrorMessage}}
                     </div>
                     {{end}}
