--- a/src/website/login/login.html
+++ b/src/website/login/login.html
@@ -1,11 +1,4 @@
-<html>
-<head>
-    <title>Circle | Login</title>
-    <link rel="stylesheet" href="../../assets/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../../assets/css/style.css"/>
-    <link rel="stylesheet" href="../../assets/css/fontawesome.all.css"/>
-</head>
-<body>
+{{define "content"}}
     <div class="container d-flex h-100">
         <div class="row card login">
             <div class="card-body">
@@ -24,15 +17,21 @@
                         </div>
                         <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Password">
                     </div>
-                    <div class="alert alert-danger error" role="alert">
-                        Invalid username or password
-                    </div>
+                    {{if .Display}}
+                        {{$alert := ""}}
+                        {{if eq .Type "success"}}
+                            {{$alert = "alert-success"}}
+                        {{else}}
+                            {{$alert = "alert-danger"}}
+                        {{end}}
+
+                        <div class='alert {{$alert}} message' role="alert">
+                            {{.Text}}
+                        </div>
+                    {{end}}
                     <button type="button" class="btn btn-dark float-right">Login</button>
                 </p>
             </div>
         </div>
     </div>
-    <script src="../../assets/js/jquery-3.3.1.slim.min.js" type="text/javascript"></script>
-    <script src="../../assets/js/bootstrap.min.js" type="text/javascript"></script>
-</body>
-</html>
+{{end}}
