--- a/src/website/login/login.html
+++ b/src/website/login/login.html
@@ -1,38 +1,29 @@
-<html>
-<head>
-    <title>Circle | Login</title>
-    <link rel="stylesheet" href="../../assets/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../../assets/css/style.css"/>
-    <link rel="stylesheet" href="../../assets/css/fontawesome.all.css"/>
-</head>
-<body>
-    <div class="container d-flex h-100">
-        <div class="row card login">
-            <div class="card-body">
-                <h5 class="card-title">Login</h5>
-                
-                <p class="card-text">
+{{define "content"}}
+<div class="container d-flex h-100">
+    <div class="row card login">
+        <div class="card-body">
+            <h5 class="card-title">Login</h5>
+            <p class="card-text">
+                <form action="/login" action="POsT">
                     <div class="input-group">
                         <div class="input-group-prepend">
                             <div class="input-group-text"><span class="fas fa-user"></span></div>
                         </div>
-                        <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Username">
+                        <input type="text" class="form-control" name="username" placeholder="Username">
                     </div>
                     <div class="input-group">
                         <div class="input-group-prepend">
                             <div class="input-group-text"><span class="fas fa-unlock"></span></div>
                         </div>
-                        <input type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Password">
+                        <input type="text" class="form-control"  name="password" placeholder="Password">
                     </div>
                     <div class="alert alert-danger error" role="alert">
                         Invalid username or password
                     </div>
                     <button type="button" class="btn btn-dark float-right">Login</button>
-                </p>
-            </div>
+                </form>
+            </p>
         </div>
     </div>
-    <script src="../../assets/js/jquery-3.3.1.slim.min.js" type="text/javascript"></script>
-    <script src="../../assets/js/bootstrap.min.js" type="text/javascript"></script>
-</body>
-</html>
+</div>
+{{end}}
