--- a/src/website/home/home.html
+++ b/src/website/home/home.html
@@ -1,154 +1,31 @@
 {{define "content"}}
+
 <div class="container">
+    {{range .}}
     <div class="card my-2 question">
         <div class="card-body">
             <div class="row">
                 <div class="col-md-1 left">
                     <div class="vote">
                         <div class="fas fa-chevron-up vote-button"></div>
-                        <div>24</div>
+                        <div>{{.Vote}}</div>
                         <div class="fas fa-chevron-down vote-button"></div>
                     </div>
                     <p>2 Answers</p>
-                    <p class="bg-success text-white">Solved</p>
+                    {{if .IsSolved}}
+                        <p class="bg-success text-white">Solved</p>
+                    {{end}}
                 </div>
                 <div class="col-md-11 right">
-                    <h5 class="card-title"><a href="#">Question Title</a></h5>
-                    <h6 class="card-subtitle mb-2 text-muted"><a href="#">Username</a></h6>
+                    <h5 class="card-title"><a href="#">{{.Title}}</a></h5>
+                    <h6 class="card-subtitle mb-2 text-muted"><a href="#">{{.Username}}</a></h6>
                     <p class="card-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Mauris convallis, dolor eu ultrices porta, dui mi ornare
-                        mauris, rutrum ultrices tellus nisl tincidunt arcu.
-                        Nam condimentum ac ex vitae varius. Sed augue eros,
-                        luctus non nisl vitae, bibendum suscipit erat.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nullam a mi elementum justo luctus dignissim a et nisl.
-                        Proin rutrum justo est, nec pellentesque dui scelerisque
-                        vitae.
+                        {{.Description}}
                     </p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="card my-2 question">
-        <div class="card-body">
-            <div class="row">
-                <div class="col-md-1 left">
-                    <div class="vote">
-                        <div class="fas fa-chevron-up vote-button"></div>
-                        <div>24</div>
-                        <div class="fas fa-chevron-down vote-button"></div>
-                    </div>
-                    <p>2 Answers</p>
-                    <p class="bg-success text-white">Solved</p>
-                </div>
-                <div class="col-md-11 right">
-                    <h5 class="card-title"><a href="#">Question Title</a></h5>
-                    <h6 class="card-subtitle mb-2 text-muted"><a href="#">Username</a></h6>
-                    <p class="card-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Mauris convallis, dolor eu ultrices porta, dui mi ornare
-                        mauris, rutrum ultrices tellus nisl tincidunt arcu.
-                        Nam condimentum ac ex vitae varius. Sed augue eros,
-                        luctus non nisl vitae, bibendum suscipit erat.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nullam a mi elementum justo luctus dignissim a et nisl.
-                        Proin rutrum justo est, nec pellentesque dui scelerisque
-                        vitae.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="card my-2 question">
-        <div class="card-body">
-            <div class="row">
-                <div class="col-md-1 left">
-                    <div class="vote">
-                        <div class="fas fa-chevron-up vote-button"></div>
-                        <div>24</div>
-                        <div class="fas fa-chevron-down vote-button"></div>
-                    </div>
-                    <p>2 Answers</p>
-                    <p class="bg-success text-white">Solved</p>
-                </div>
-                <div class="col-md-11 right">
-                    <h5 class="card-title"><a href="#">Question Title</a></h5>
-                    <h6 class="card-subtitle mb-2 text-muted"><a href="#">Username</a></h6>
-                    <p class="card-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Mauris convallis, dolor eu ultrices porta, dui mi ornare
-                        mauris, rutrum ultrices tellus nisl tincidunt arcu.
-                        Nam condimentum ac ex vitae varius. Sed augue eros,
-                        luctus non nisl vitae, bibendum suscipit erat.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nullam a mi elementum justo luctus dignissim a et nisl.
-                        Proin rutrum justo est, nec pellentesque dui scelerisque
-                        vitae.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="card my-2 question">
-        <div class="card-body">
-            <div class="row">
-                <div class="col-md-1 left">
-                    <div class="vote">
-                        <div class="fas fa-chevron-up vote-button"></div>
-                        <div>24</div>
-                        <div class="fas fa-chevron-down vote-button"></div>
-                    </div>
-                    <p>2 Answers</p>
-                    <p class="bg-success text-white">Solved</p>
-                </div>
-                <div class="col-md-11 right">
-                    <h5 class="card-title"><a href="#">Question Title</a></h5>
-                    <h6 class="card-subtitle mb-2 text-muted"><a href="#">Username</a></h6>
-                    <p class="card-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Mauris convallis, dolor eu ultrices porta, dui mi ornare
-                        mauris, rutrum ultrices tellus nisl tincidunt arcu.
-                        Nam condimentum ac ex vitae varius. Sed augue eros,
-                        luctus non nisl vitae, bibendum suscipit erat.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nullam a mi elementum justo luctus dignissim a et nisl.
-                        Proin rutrum justo est, nec pellentesque dui scelerisque
-                        vitae.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="card my-2 question">
-        <div class="card-body">
-            <div class="row">
-                <div class="col-md-1 left">
-                    <div class="vote">
-                        <div class="fas fa-chevron-up vote-button"></div>
-                        <div>24</div>
-                        <div class="fas fa-chevron-down vote-button"></div>
-                    </div>
-                    <p>2 Answers</p>
-                    <p class="bg-success text-white">Solved</p>
-                </div>
-                <div class="col-md-11 right">
-                    <h5 class="card-title"><a href="#">Question Title</a></h5>
-                    <h6 class="card-subtitle mb-2 text-muted"><a href="#">Username</a></h6>
-                    <p class="card-text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Mauris convallis, dolor eu ultrices porta, dui mi ornare
-                        mauris, rutrum ultrices tellus nisl tincidunt arcu.
-                        Nam condimentum ac ex vitae varius. Sed augue eros,
-                        luctus non nisl vitae, bibendum suscipit erat.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nullam a mi elementum justo luctus dignissim a et nisl.
-                        Proin rutrum justo est, nec pellentesque dui scelerisque
-                        vitae.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
+    {{end}}
 </div>
 {{end}}
