--- a/src/website/home/home.html
+++ b/src/website/home/home.html
@@ -28,7 +28,7 @@
                     {{end}}
                 </div>
                 <div class="col-md-11 right">
-                    <h5 class="card-title"><a href="#">{{.Question.Title}}</a></h5>
+                    <h5 class="card-title"><a href="/discussion/{{.Question.ID}}">{{.Question.Title}}</a></h5>
                     <h6 class="card-subtitle mb-2 text-muted">
                         <small>Posted at: {{.Question.CreatedDate | formatCreatedDate}}</small><br/>
                         <a href="#">{{.Question.Username}}</a>
