--- a/src/website/home/home.html
+++ b/src/website/home/home.html
@@ -22,15 +22,15 @@
                         {{end}}
                         
                     </div>
-                    <p>2 Answers</p>
-                    {{if .Question.IsSolved}}
+                    <p>{{.NumberOfAnswers}} Answers</p>
+                    {{if .IsSolved}}
                         <p class="bg-success text-white">Solved</p>
                     {{end}}
                 </div>
                 <div class="col-md-11 right">
                     <h5 class="card-title"><a href="/discussion/{{.Question.ID}}">{{.Question.Title}}</a></h5>
                     <h6 class="card-subtitle mb-2 text-muted">
-                        <small>Posted at: {{.Question.CreatedDate | formatCreatedDate}}</small><br/>
+                        <small>Posted on: {{.Question.CreatedDate | formatCreatedDate}}</small><br/>
                         <a href="#">{{.Question.Username}}</a>
                     </h6>
                     <p class="card-text">
