--- a/src/website/login/login.html
+++ b/src/website/login/login.html
@@ -30,7 +30,12 @@
                             {{.Text}}
                         </div>
                     {{end}}
-                    <button type="submit" class="btn btn-dark float-right">Login</button>
+
+                    <div class="btn-wrapper">
+                        <a href="/register" class="btn btn-dark reg-link">Register</a>
+                        <button type="submit" class="btn btn-dark">Login</button>
+                    </div>
+                    
                     </form>
                 </p>
             </div>
