--- a/src/website/ask/ask.html
+++ b/src/website/ask/ask.html
@@ -6,7 +6,7 @@
             <input type="text" class="form-control" placeholder="Title" name="title" />
         </div>
         <div class="form-group" style="margin: 20px 0px;">
-            <textarea class="form-control" placeholder="Title" rows="15"></textarea>
+            <textarea class="form-control" placeholder="Title" rows="15" name="question"></textarea>
         </div>
         <button type="submit" class="btn" style="background: orange; color: white;">Submit</button>
     </form>
