--- a/src/website/discussion/discussion.html
+++ b/src/website/discussion/discussion.html
@@ -28,7 +28,7 @@
                     <h5 class="card-title"><a href="#">{{.Question.Title}}</a></h5>
                     <h6 class="card-subtitle mb-2 text-muted">
                         <small>Posted on: {{.Question.CreatedDate | formatCreatedDate}}</small><br/>
-                        <a href="#">{{.Question.Username}}</a>
+                        <a href="/profile/{{.Question.Username}}">{{.Question.Username}}</a>
                     </h6>
                     <p class="card-text">
                         {{.Question.Description}}
@@ -57,7 +57,7 @@
                 <div class="row">
                     <div class="col-md-1 left">
                         <img src="../../assets/img/man.png" alt="Man"/>
-                        <a href="#">{{.Username}}</a>
+                        <a href="/profile/{{.Username}}">{{.Username}}</a>
                         {{if .IsGood}}
                             <div class="good-answer">
                                 <span class="fa fa-check btn-good-answer selected"></span>
