--- a/src/website/discussion/discussion.html
+++ b/src/website/discussion/discussion.html
@@ -56,7 +56,7 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-md-1 left">
-                        <img src="../../assets/img/man.png" alt="Man"/>
+                        <img src="{{.ImageUrl}}" alt="Man"/>
                         <a href="/profile/{{.Username}}">{{.Username}}</a>
                         {{if .IsGood}}
                             <div class="good-answer">
