--- a/src/website/profile/profile.html
+++ b/src/website/profile/profile.html
@@ -2,6 +2,7 @@
     <div class="container">
         <h3>Profile</h3>
         <div class="row">
+            <img src="{{.ImageName}}" alt="Man" class="col-md-2">
             <div class="col-md-6">
                 <div class="row">
                     <div class="col-md-6">
