--- a/src/website/register/register.html
+++ b/src/website/register/register.html
@@ -6,7 +6,7 @@
             <h5 class="card-title">Register</h5>
             
             <p class="card-text">
-                <form action="/register" method="POST">
+                <form action="/register" method="POST" enctype="multipart/form-data">
                     <div class="input-group">
                         <div class="input-group-prepend">
                             <div class="input-group-text"><span class="fas fa-user"></span></div>
@@ -30,6 +30,9 @@
                             <div class="input-group-text"><span class="fas fa-check"></span></div>
                         </div>
                         <input type="password" class="form-control" name="confirm_password" placeholder="Confirm password">
+                    </div>
+                    <div class="input-group">
+                        <input type="file" name="image" class="form-control-file"/>
                     </div>
 
                     {{if .IsError}}
